flicker fixed

--- a/style.css
+++ b/style.css
@@ -380,7 +380,6 @@ h1 {
 
 @media only screen and (max-width: 763px) {
 	#tweet {
-		top:5%;
 		left:55%;
 	}
 }
